[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-lang.workspace = true
boring-vault-svm = { path = "../../programs/boring-vault-svm", features = ["no-entrypoint"] }

[dev-dependencies]
arbitrary = { version = "1.3", features = ["derive"] }
quickcheck = "1.0"
proptest = "1.0"
