[package]
name = "boring-vault-svm"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "boring_vault_svm"

[features]
default = ["custom-heap", "custom-panic"]
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
custom-heap = []
custom-panic = []
anchor-debug = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = [
    "interface-instructions",
    "init-if-needed",
] }
anchor-spl = "0.30.1"
switchboard-on-demand = "0.2.2"
rust_decimal = "1.36.0"
solana-program = "1.16.24"
spl-tlv-account-resolution = "0.4.0"
spl-transfer-hook-interface = "0.3.0"
