[package]
name = "boring-vault-svm"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "boring_vault_svm"

[features]
default = ["custom-heap", "custom-panic"]
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
custom-heap = []
custom-panic = []
anchor-debug = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
switchboard-on-demand = "0.2.2"
rust_decimal = "1.36.0"
solana-program = "1.17.18"
mpl-token-metadata = { version = "1.13.1", features = ["no-entrypoint"] }
