[package]
name = "boring-vault-svm"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "boring_vault_svm"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
rust_decimal = { workspace = true }
switchboard-on-demand = "0.3.5"
hex = "0.4.3"
spl-token-metadata-interface = "0.7.0"
spl-type-length-value = "0.8.0"
