[package]
name = "endpoint"
version = "0.1.0"
description = "Layer Zero Endpoint Mock Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "endpoint"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = { workspace = true }

