[package]
name = "layer-zero-share-mover"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "layer_zero_share_mover"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]


[dependencies]
anchor-lang.workspace = true
anchor-spl.workspace = true
boring-vault-svm = { path = "../boring-vault-svm", features = ["no-entrypoint"] }
common = { path = "../../crates/common"}